# anotify

./: .gitignore  CHANGES.md  CLIENT_INSTALL.md  LICENSE  README.md  anotify.spec  build_exe.py  pyproject.toml
.github/workflows/: build-desktop.yml  ci.yml
desktop/: INTEGRATION.md  README-Windows.md  README.md  anotify.bat  build.bat  build.sh  install.bat  package.json  setup-token.bat  setup_desktop.sh
desktop/src/: app.js  index.html  style.css  toast.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: clear_notifications.toml  get_notifications.toml  reconnect.toml  respond_approval.toml  verify_connection.toml
desktop/src-tauri/src/: main.rs  ws.rs
scripts/: check-bundle-size.py  setup_mac.sh
server/: Dockerfile  README.md  README_hf.md  requirements.txt  server.py
src/anotify/: __init__.py  approval.py  cli.py  client.py  config.py  events.py  gui.py  mac_app.py  notify_backend.py
tests/: conftest.py  test_approval.py  test_approval_ui_contract.py  test_cli.py  test_config.py  test_dashboard_ui_contract.py  test_notify_backend.py  test_security_regressions.py  test_server.py  test_sprite_frames.py  test_toast_fonts.py
